[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/PTMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://KeybindSelector.gd" type="Script" id=2]
[ext_resource path="res://MainMenuSprites/OGPC_Main_Menu_Keybind_Selector.png" type="Texture" id=3]
[ext_resource path="res://MainMenuSprites/OGPC_Main_Menu_Keybind_Selector_Selected.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="KeybindSelector" type="Area2D"]
z_index = 4096
script = ExtResource( 2 )

[node name="OgpcMainMenuKeybindSelector" type="Sprite" parent="."]
position = Vector2( 32.5, 24 )
scale = Vector2( 1.01562, 1 )
texture = ExtResource( 3 )

[node name="Keybind_Text" type="Label" parent="."]
modulate = Color( 2, 2, 2, 1 )
margin_left = 4.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "X"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="OgpcMainMenuKeybindSelectorSelected" type="Sprite" parent="."]
position = Vector2( 33, 24 )
texture = ExtResource( 4 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -6.0
margin_top = -5.0
margin_right = 70.0
margin_bottom = 53.0

[connection signal="mouse_entered" from="." to="." method="_on_KeybindSelector_mouse_entered"]
[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
